ollama-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: ollama-pvc   
      containers:
        - name: ollama-pull
          image: docker.io/ollama/ollama:latest     
          command: ["/bin/sh", "-c"]
          args:
            - |
              ollama serve &
              sleep 5       
              if [ ! -f /root/.ollama/models/manifests/registry.ollama.ai/library/deepseek-coder/1.3b ]; then
                echo "Model not found, pulling..."
                ollama pull deepseek-coder:1.3b 
              fi
              ollama run deepseek-coder:1.3b
              sleep infinity   
          volumeMounts:
            - name: shared-volume
              mountPath: /root/.ollama
