openwebui-svc.yaml
# By default, this service is of type ClusterIP, 
# as it will be exposed through our K8s API Gateway.
# If you do not have a Gateway and wants to expose openwebui as a NodePort,
# comment the first declaration and uncomment the second 
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
  namespace: ollama
spec:
  selector:
    app: open-webui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: open-webui-service
#   namespace: ollama
# spec:
#   type: NodePort
#   selector:
#     app: open-webui
#   ports:
#     - protocol: TCP
#       nodePort: 32280  
#       port: 80
#       targetPort: 8080
